--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# requirements.txt
 fastapi
 uvicorn[standard]
-pydantic
-python-dotenv # Lê o arquivo .env
+sqlalchemy
+psycopg2-binary
+python-dotenv
